--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,8 +42,68 @@ pages:
     - Why ZeroDiff?: about/why.md
     - Contribute: about/contribute.md
     - License: about/license.md
-theme: mkdocs
-markdown_extensions: [tables]
+theme:
+  name: mkdocs
+  theme_dir: themes/material
+  custom_dir: theme-overrides
+  favicon: 'images/favicon/favicon.ico'
+  logo: 'images/favicon/apple-icon-144x144.png'
+  feature:
+    tabs: true
+    
+extra:
+  feature:
+    tabs: true
+  logo: 'images/profile.png'
+  palette:
+    primary: 'indigo'
+    accent: 'indigo'
+  font:
+    text: 'Roboto'
+    code: 'Roboto Mono'
+  social:
+    - type: 'github'
+      link: 'https://github.com/0x6a77'
+    - type: 'envelope-square'
+      link: 'http://eepurl.com/dl_CsD'
+
+markdown_extensions:
+  - tables
+  - admonition
+  - codehilite(guess_lang=false)
+  - toc(permalink=true)
+  - pymdownx.arithmatex
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:pymdownx.emoji.to_svg
+  - pymdownx.inlinehilite
+  - pymdownx.magiclink
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences:
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+
 repo_url: https://github.com/0x6a77/zerodiff/
-google_analytics: ['UA-78164923-1', '0x6a77.github.io']
 copyright: <a href="https://tinyletter.com/zerodiff/archive">ZeroDiff TinyLetter Blog</a><br>Copyright &copy; 2016 <a href="https://github.com/0x6a77">Jeff Williams</a> under BSD-3 License
+
+extra_css:
+  - ./js/extra.css
+
+extra_javascript:
+  - './js/extra.js'
+  - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
+  - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
+  - 'https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.7/raphael.min.js'
+  - 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'
+  - 'https://cdnjs.cloudflare.com/ajax/libs/js-sequence-diagrams/1.0.6/sequence-diagram-min.js'
+  - 'https://cdnjs.cloudflare.com/ajax/libs/flowchart/1.6.5/flowchart.min.js'
+
+google_analytics:
+  - 'UA-78164923-1'
+  - 'auto'
